--- a/partials/resultats/resultats.html
+++ b/partials/resultats/resultats.html
@@ -1,65 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" ng-app="dojo">
 <head>
 	<meta charset="UTF-8">
 	<title>Dojo Beauceron - Résultats</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<script src="../../js/vendor/angular/angular.js"></script>
+	<script src="../../js/app.js"></script>
+	<liens></liens>
+	<script src="../../js/vendor/jquery/jquery.js"></script>
+	<script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
 </head>
 <body>
 
-<!-- navigation -->
-
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <img alt="Brand" class="pull-left" src="img/logo.png"><a class="navbar-brand" id="title_logo" href="#">Dojo Beauceron</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="nav navbar-nav pull-right">
-        <li><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
-        <!--<li><a href="#">Link</a></li>-->
-        <li class="dropdown">
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actualités <span class="caret"></span></a>-->
-          <a href="#">Actualités <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="news.html">News</a></li>
-            <li><a href="calendrier.html">Calendrier</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#">Le Club <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="horaires.html">Horaires</a></li>
-            <li><a href="Inscription_Tarifs.html">Inscriptions et Tarifs</a></li>
-            <li><a href="#">Dojos</a></li>
-            <li><a href="historique.html">Historique</a></li>
-            <li><a href="documents.html">Documents</a></li>
-          </ul>
-        </li>
-        <li class="active"><a href="resultats.html">Résultats</a></li>
-        <li><a href="#">Contact</a></li>
-        <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Rechercher</button>
-        </form>
-      </ul>
-
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
- <div id="liseret"></div>
-</nav>
+<navigation></navigation>
 
 <div class="container-fluid">
 
@@ -69,40 +21,9 @@
 
     <div class="row select_elements">
 
-        <div class="col-xs-3"></div>
+       <select-annee></select-annee>
 
-        <div class="col-xs-2 text-center">
-
-        	<form method="post" action="resultats.html">
-                <p>
-                    <label for="annee">Année</label><br />
-                    <select name="annee" id="annee" title="selecteurs">
-                    <option value="2017">2016 - 2017</option>
-                    <option value="2016">2015 - 2016</option>
-                    <option value="2015">2014 - 2015</option>
-                    <option value="2014">2013 - 2014</option>
-                    <option value="2013">2012 - 2013</option>
-                    <option value="2012">2011 - 2012</option>
-                    <option value="2011">2010 - 2011</option>
-                    </select>
-                </p>
-            </form>
-
-        </div>
-
-        <div class="col-xs-2 text-center">
-
-        	<form method="post" action="resultats.html">
-                <p>
-                    <label for="sexe">Catégorie H/F</label><br />
-                    <select name="sexe" id="sexe" title="selecteurs">
-                    <option value="Homme">Homme</option>
-                    <option value="Femme">Femme</option>
-                    </select>
-                </p>
-            </form>
-        	
-        </div>
+       <select-sexe></select-sexe>
 
         <div class="col-xs-2 text-center">
 
