--- a/partials/documents/documents.html
+++ b/partials/documents/documents.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <title>Dojo Beauceron - Documents</title>
     <script src="../../js/vendor/angular/angular.js"></script>
+    <script src="../../js/vendor/angular/angular-route.min.js"></script>
     <script src="../../js/app.js"></script>
+
     <liens></liens>
     <script src="../../js/vendor/jquery/jquery.js"></script>
     <script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
