--- a/partials/resultats/resultats.html
+++ b/partials/resultats/resultats.html
@@ -11,7 +11,7 @@
     <script src="../../js/vendor/jquery/jquery.js"></script>
     <script src="../../js/vendor/bootstrap/bootstrap.min.js"></script>
 </head>
-<body>
+<body ng-controller="resultatsController as result">
 <div ng-view></div>
 <navigation></navigation>
 
