--- a/partials/common/pied.html
+++ b/partials/common/pied.html
@@ -3,6 +3,6 @@
         <p>&copy; 2016, Dojo Beauceron, tous droits réservés</p>
     </div>
     <div class="col-xs-4">
-        <a href="../mentions/mentions.html">Mentions légales</a>
+        <a href="#mentions">Mentions légales</a>
     </div>
 </div>
