--- a/partials/contact/contact.html
+++ b/partials/contact/contact.html
@@ -3,9 +3,17 @@
   <div class="row ">
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-success btn-lg center-block" data-toggle="modal" data-target="#myModal">
-      Nous contacter !
-    </button></br></br>
+    <div class="btn-group col-md-offset-5">
+      <button type="button" class="btn btn-success btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Nous contacter ! <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" style="width:100%;">
+        <li><a data-toggle="modal" data-target="#myModal" style="cursor:pointer;">Via le site</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#">Vous même</a></li>
+      </ul>
+    </div>
+  </br></br>
 
     <!-- FORMULAIRE -->
     <div class="formContact modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
